2007-07-18  Bob Wilson  <bob.wilson@acm.org>
	
	* elf32-xtensa.c (elf_xtensa_finish_dynamic_sections): Get section
	vma and size for dynamic tags from the output sections.
	
2007-07-18  Alan Modra  <amodra@bigpond.net.au>

	* elf-bfd.h (struct sym_sec_cache): Delete "sec".  Add "shndx".
	* elf.c (bfd_section_from_r_symndx): Don't cache bfd section of
	symbol.  Instead cache ELF section index.  Remove redundant
	checks of st_shndx.

2007-07-15  Mike Frysinger  <vapier@gentoo.org>

	* trad-core.c (NBPG): If not defined, set to getpagesize().

2007-07-13  Roland McGrath  <roland@redhat.com>

	* elf-bfd.h (struct elf_obj_tdata): Revert last change.
	Add after_write_object_contents, after_write_object_contents_info.
	* elf.c (_bfd_elf_write_object_contents): Revert last change.
	Instead, call after_write_object_contents if set.

2007-07-12  Kai Tietz   <kai.tietz@onevision.com>

	* bfd-in.h: (BFD_HOST_64BIT_LONG_LONG): New.
	(BFD_HOSTPTR_T): Host pointer type for casting a
	pointer to an integer type.
	(bfd_hostptr_t): The typedef of BFD_HOSTPTR_T.
	(sprintf_vma, fprintf_vma): Add support for long long prints.
	* bfd-in2.h: Regenerate.
	* configure.in: (BFD_HOST_64BIT_LONG_LONG): New.
	(BFD_HOSTPTR_T): Host pointer type for casting a
	pointer to an integer type. Default is "unsigned long".
	(AC_CHECK_SIZEOF(void *)): New.
	(host64): Set it if the pointer size is 8.
	* configure: Regenerate.
	* config.in: Add macro SIZEOF_VOID_P.
	* coffcode.h: Replace host ptr type assuming "long" with
	bfd_hostptr_t type.
	* coffgen.c: Likewise.
	* elf-eh-frame.c: Likewise.
	* peicode.h: Likewise.

2007-07-10  H.J. Lu  <hongjiu.lu@intel.com>

	* Makefile.in: Regenerated.

2007-07-10  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/4756
	* simple.c (bfd_simple_get_relocated_section_content): Don't
	apply relocation on executable and shared library.

2007-07-10  Nathan Sidwell  <nathan@codesourcery.com>

	* elf32-ppc.c (ppc_elf_adjust_dynamic_symbol): Don't eliminate