@@ -1,5 +1,10 @@
 2007-07-18  Bob Wilson  <bob.wilson@acm.org>
 	
+	* elf32-xtensa.c (xtensa_callback_required_dependence): Ignore
+	non-ELF sections.
+	
+2007-07-18  Bob Wilson  <bob.wilson@acm.org>
+	
 	* elf32-xtensa.c (elf_xtensa_finish_dynamic_sections): Get section
 	vma and size for dynamic tags from the output sections.
 	
